2017-06-22 Fred Gleason <fredg@paravelsystems.com> 	* Renamed 'flip.py' to 'flip'.

--- a/flipscript.spec.in
+++ b/flipscript.spec.in
@@ -30,7 +30,7 @@ rm -rf %{buildroot}
 
 %files
 %defattr(-,root,root)
-%{_bindir}/flip.py
+%{_bindir}/flip
 %dir /etc/flipscript.d
 %dir /usr/lib/flipscripts
 %doc COPYING
