--- a/configure.ac
+++ b/configure.ac
@@ -6,13 +6,29 @@ dnl Use autoconf to process this into a configure script
 dnl
 dnl   (C) Copyright 2017 Fred Gleason <fredg@paravelsystems.com>
 dnl
-dnl   All Rights Reserved.
+dnl   This program is free software; you can redistribute it and/or modify
+dnl   it under the terms of the GNU General Public License version 2 as
+dnl   published by the Free Software Foundation.
+dnl
+dnl   This program is distributed in the hope that it will be useful,
+dnl   but WITHOUT ANY WARRANTY; without even the implied warranty of
+dnl   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+dnl   GNU General Public License for more details.
+dnl
+dnl   You should have received a copy of the GNU General Public
+dnl   License along with this program; if not, write to the Free Software
+dnl   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 dnl
 
 AC_INIT(flipscript,m4_esyscmd(cat PACKAGE_VERSION))
 AM_INIT_AUTOMAKE
 AC_SUBST(RPM_RELEASE,1)
 m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
+
+#
+# Option Switches
+#
+AC_ARG_ENABLE(docbook,[  --disable-docbook       disable building of documentation],[DOCBOOK_DISABLED=yes],[])
 
 #
 # Determine the target architecture
@@ -26,6 +42,14 @@ AC_SUBST(ARCH,$ar_gcc_arch)
 #
 AR_GET_DISTRO()
 AC_SUBST(DISTRO,$ar_gcc_distro)
+
+#
+# Build DocBook Items?
+#
+if test -z $DOCBOOK_DISABLED ; then
+  USING_DOCBOOK=yes
+fi
+AM_CONDITIONAL([DOCBOOK_AM], [test "$USING_DOCBOOK" = yes])
 
 #
 # Configure RPM Build
@@ -45,6 +69,7 @@ else
 fi 
 
 AC_CONFIG_FILES([ \
+    docs/Makefile \
     flipscript.spec \
     Makefile \
 ])
