2025-04-12 Fred Gleason <fredg@paravelsystems.com> 	* Refactored flip(1) so as to prompt for an ssh(1) passphrase once 	at the beginning of a session. 	* Added an expect(1) dependency.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/flipscript.spec.in
+++ b/flipscript.spec.in
@@ -5,7 +5,7 @@ Summary:	Automatic VNC login for display :0
 License:	GPLv2
 Source:		%{name}-%{version}.tar.gz
 BuildRoot:	%{_tmppath}/%{name}-%{version}-build
-Requires:       python
+Requires:       python, expect
 
 
 %description
