2025-04-12 Fred Gleason <fredg@paravelsystems.com> 	* Removed '/etc/flipscript.d/' and '/usr/lib/flipscripts/' from the 	fixed installation hierarchy. 	* Added creation of '/etc/flipscript.d/' and '/usr/lib/flipscripts/' 	to the post installation script in the RPM package.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/flipscript.spec.in
+++ b/flipscript.spec.in
@@ -38,6 +38,11 @@ rm -rf %{buildroot}
 %doc README
 
 
+%post
+mkdir -p /etc/flipscript.d
+mkdir -p /usr/lib/flipscripts
+
+
 %changelog
 * Wed Jun 21 2017 Fred Gleason <fredg@paravelsystems.com>
 -- Initial packaging.
