2025-04-15 Fred Gleason <fredg@paravelsystems.com> 	* Updated the internal expect(1) scripting to better handle errors 	and exceptions.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -25,7 +25,8 @@ endif
 
 SUBDIRS = helpers \
           $(DOCBOOK_OPT) \
-          debian
+          debian \
+          expect
 
 bin_SCRIPTS = flip
 
