2025-04-15 Fred Gleason <fredg@paravelsystems.com> 	* Moved the expect script template for flip(1) from 	'/usr/share/flipscript/template.exp' to 	'/usr/share/flipscript/flip.exp'.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/expect/Makefile.am
+++ b/expect/Makefile.am
@@ -22,11 +22,11 @@
 
 install-exec-am:
 	mkdir -p $(DESTDIR)@prefix@/share/flipscript
-	cp template.exp $(DESTDIR)@prefix@/share/flipscript/
+	cp flip.exp $(DESTDIR)@prefix@/share/flipscript/
 
 uninstall-local:
-	rm $(DESTDIR)@prefix@/share/flipscript/template.exp
+	rm $(DESTDIR)@prefix@/share/flipscript/flip.exp
 
-EXTRA_DIST = template.exp
+EXTRA_DIST = flip.exp
 
 CLEANFILES = *~
