2025-04-16 Fred Gleason <fredg@paravelsystems.com> 	* Moved the location for the system-wide flip script store from 	'/usr/lib/flipscripts/' to '/var/lib/flipscripts/'.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/expect/Makefile.am
+++ b/expect/Makefile.am
@@ -21,11 +21,11 @@
 ## Use automake to process this into a Makefile.in
 
 install-exec-am:
-	mkdir -p $(DESTDIR)@prefix@/share/flipscript
-	cp flip.exp $(DESTDIR)@prefix@/share/flipscript/
+	mkdir -p $(DESTDIR)@prefix@/lib/flipscript
+	cp flip.exp $(DESTDIR)@prefix@/lib/flipscript/
 
 uninstall-local:
-	rm $(DESTDIR)@prefix@/share/flipscript/flip.exp
+	rm $(DESTDIR)@prefix@/lib/flipscript/flip.exp
 
 EXTRA_DIST = flip.exp
 
