2025-04-16 Fred Gleason <fredg@paravelsystems.com> 	* Added a mscp(1) command.
Signed-off-by: Fred Gleason <fredg@paravelsystems.com>

--- a/commands/Makefile.am
+++ b/commands/Makefile.am
@@ -23,10 +23,13 @@
 install-exec-am:
 	mkdir -p $(DESTDIR)@prefix@/bin
 	cp flip.py $(DESTDIR)@prefix@/bin/flip
+	cp mscp.py $(DESTDIR)@prefix@/bin/mscp
 
 uninstall-local:
 	rm $(DESTDIR)@prefix@/bin/flip
+	rm $(DESTDIR)@prefix@/bin/mscp
 
-EXTRA_DIST = flip.py
+EXTRA_DIST = flip.py\
+             mscp.py
 
 CLEANFILES = *~
